--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
 
    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"/>
+   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 
 
    <!-- Custom styles for this template -->
@@ -27,17 +28,22 @@
 	  <img class="logo" src="theme/html/assets/logo-white.svg"/>
           <a class="title" href="#">{{ title }}</a>
         </div>
-        <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div><!--/.navbar-collapse -->
+
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+
+
+        <div class="col-sm-3 col-md-3 pull-right">
+	        <form class="navbar-form" role="search">
+	        <div class="input-group">
+	            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+	            <div class="input-group-btn">
+	                <button class="btn btn-default search-button" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+	            </div>
+	        </div>
+	        </form>
+        </div>
+
+    </div>
       </div>
     </div>
 
@@ -47,8 +53,15 @@
           {{ content }}
         </div>
       </div>
+      </div>
     </div>
 
+  
+    <div class="pagination">
+        <a href="{{ prev_link }}"><span class="glyphicon glyphicon-chevron-left"></span></a>
+        <a href="{{ next_link }}"><span class="glyphicon glyphicon-chevron-right"></span></a>
+    </div>
+ 
     <div class="footer">
       <footer>
         <p>&copy; Company 2014</p>
