--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -1,20 +1,20 @@
 {{ doctype }}
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
     <title>{{ title }}</title>
 
     <!-- Bootstrap core CSS -->
-   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"/>
 
    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"/>
 
    <!-- Custom styles for this template -->
-   <link href="theme/html/stylesheets/base.css" rel="stylesheet">
+   <link href="theme/html/stylesheets/base.css" rel="stylesheet"/>
    <link href="theme/html/stylesheets/book.css" media="all" rel="stylesheet" type="text/css" />
    <link href="theme/html/stylesheets/codemirror.css" media="all" rel="stylesheet" type="text/css" />
 
@@ -42,7 +42,7 @@
            <div class="col-sm-3 col-md-3 pull-right">
 	        <form class="navbar-form" role="search">
 	           <div class="input-group">
-	              <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+	              <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"/>
 	              <div class="input-group-btn">
 	                 <button class="btn btn-default search-button" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 	              </div>
