--- a/theme/html/layout.html
+++ b/theme/html/layout.html
@@ -65,11 +65,13 @@
   
     <div class="container">
 	<div class="row">
-          <div class="col-md-12 pagination">
-	     <a href="{{ prev_link }}" class="btn"><span class="glyphicon glyphicon-chevron-left"></span> Prev</a>
-	     <a href="{{ next_link }}" class="btn">Next <span class="glyphicon glyphicon-chevron-right"></span></a>
-          </div>
-       </div>
+	  <div class="pagination">
+	      <ul>
+	        <li class="prev">{{ prev_link }}</li>
+	        <li class="next">{{ next_link }}</li>
+	      </ul>
+	  </div>       
+	</div>
     </div>
 
     <div class="container">
